Сommit from 4/11 to 17/12

--- a/forma.css
+++ b/forma.css
@@ -1,8 +1,6 @@
-p {
-   color: red;
-   font-weight: bold;       
-}
+
 blockquote {
     background: lightgreen;
     color: darkgreen;
   }
+ p { font-variant: small-caps; }
